--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -11,13 +11,13 @@ body
 
 .city-list
   display: flex
-  flex-flow: row nowrap
+  flex-flow: row wrap
   justify-content: space-around
   margin-bottom: 20px
 
   .city-list__item
     padding: 10px
-    margin: 0 20px
+    margin: 20px
     width: 25%
     min-width: 150px
     border: 1px solid #eeeeee
