--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -3,7 +3,7 @@ body
   padding: 20px
   margin: 0 auto
 
-.header
+.app-header
   text-align: center
 
   &__title
@@ -66,9 +66,23 @@ body
   justify-content: center
 
   form
+    width: 33.3%
+
     label
       display: block
       padding-bottom: 5px
+
+    .input-text,
+    .selector,
+    .button
+      width: 100%
+      height: 35px
+      font-size: 20px
+      background: #fff
+      border-radius: 0px
+
+    .input-text
+      text-align: center
 
     .form-item__group
       text-align: center
