--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,4 +1,5 @@
 body
+  font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial
   max-width: 1024px
   padding: 20px
   margin: 0 auto
@@ -73,13 +74,23 @@ body
       padding-bottom: 5px
 
     .input-text,
-    .selector,
-    .button
+    .selector
       width: 100%
       height: 35px
-      font-size: 20px
+      font-size: 16px
       background: #fff
       border-radius: 0px
+      font-weight: normal
+
+    .button
+      text-transform: uppercase
+      padding: 10px 20px
+      background: lighten(#46cfcf,20%)
+      border: none
+      cursor: pointer
+
+      &:hover
+        background: #46cfcf
 
     .input-text
       text-align: center
@@ -94,4 +105,4 @@ body
     &.ng-submitted
 
       .ng-invalid
-        border-color: tomato
+        border: 2px inset lighten(#cf4646,10%)
